versions/2.1.10/source/index.rst
Kids Web Services Children's iOS SDK
====================================

The Kids Web Services platform provides a set of compliance-as-a-service tools to create a kid-safe, COPPA-compliant framework for kids sites and apps.
Focus on delivering awesome content, whilst KWS manages the legal complexity of data-collection for you.
With simplicity built into its core, you will be able to effortlessly integrate Kids Web Services within your current technology.

=========== ========
Info        Contents
=========== ========
Version     <sdk_version> (`Changelog <https://github.com/SuperAwesomeLTD/sa-kws-ios-sdk-objc/blob/master/CHANGELOG.md>`_)
Support 		<sdk_min>
GitHub      <sdk_source>
Contact     `<sdk_devsuspport> <mailto:<sdk_devsuspport>>`_
License     `GNU General Public License Version 3 <https://github.com/SuperAwesomeLTD/sa-kws-ios-sdk-objc/blob/master/LICENSE>`_
=========== ========

Kids Web Services Demo App
--------------------------

Check out the new AwesomeAds Demo App, now available on iTunes.
It lets you preview and troubleshoot all mobile ads on the AwesomeAds platform, on the go!

+-----------------------------+-----------------------------+-----------------------------+-----------------------------+
| .. image:: img/appscr1.jpeg | .. image:: img/appscr2.jpeg | .. image:: img/appscr3.jpeg | .. image:: img/appscr4.jpeg |
|   :width: 100px             |   :width: 100px             |   :width: 100px             |   :width: 100px             |
|   :height: 178px            |   :height: 178px            |   :height: 178px            |   :height: 178px            |
+-----------------------------+-----------------------------+-----------------------------+-----------------------------+

.. image:: img/appstore.png
  :target: https://itunes.apple.com/gb/app/kids-web-services/id1158952591?mt=8

Table of Contents
-----------------

.. toctree::
   :maxdepth: 2

	 Add the SDK through CocoaPods <00addcocoa>
	 Add the SDK as a framework <00addframe>
   Add the SDK as a static library <00addstatic>
	 Overview <01overview>
	 Start a new KWS session <02session>
	 Creating a new user <02create>
	 Obtaining a random username <02random>
	 Login as user <02login>
	 Persisting the user <02persist>
	 Logout a user <02logout>
   Get user details <03userdetails>
   Update user <04userupdate>
   Request permissions <05userpermission>
	 Associate a parent email <06parentemail>
   Invite friends <07userinvite>
	 Trigger event <08triggerevent>
	 Get score <09getscore>
	 Get leaderboard <10getleaderboard>
	 App data <11appdata>
	 Firebase <12firebase>
	 Notifications <13notifications>
